--- a/.github/workflows/test-pr-comment.yml
+++ b/.github/workflows/test-pr-comment.yml
@@ -7,7 +7,7 @@ jobs:
   test1:
     uses: wespickett/pr-commenter-action@4ee373a54638df3ef5564005793a71b65a127668
     with:
-      config-file: ".github/test-pr-comment-template.yml"
+      config-file: "wespickett/action-test@d8bc517b7d45a8657ba0a66e8dc046be08566750:.github/test-pr-comment-template.yml"
       template-variables: |
         {
           "testVal": "test123"
